src/test/deca/context/invalid/created/decl_var/decl_int_eq_float.deca
// Description :
//    test affectation incorrect int = float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
int a = 0.5; 
//0.5 n'est pas un int
}